add css stylings for mobile

--- a/styles.css
+++ b/styles.css
@@ -6,11 +6,15 @@ h5 {font-size: 200%;}
 h6 {font-size: 175%;}
 p {}
 
+* {
+  box-sizing: border-box;
+}
 .header-wrapper {
   display: flex;
   flex-direction: column;
   background: #e5f3f2;
   width: 100vw;
+  align-items: center;
 }
 
 header, h1 {
@@ -25,7 +29,6 @@ h1 {
 }
 body {
   font-family: 'Open Sans', sans-serif;
-  box-sizing: border-box;
   display: flex;
   flex-direction: column;
 }
@@ -51,25 +54,37 @@ input {
   padding: 0;
 }
 .input-title {
+  font-family: 'Open Sans', sans-serif;
   justify-content: center;
-  height: 20px;
   margin-top: 15px;
   width: 100%;
   border: 2px solid #D1D3D4;
+  color:#D1D3D4;
+  font-size: 15px;
+  padding: 5px;
 }
 .input-body {
+  font-family: 'Open Sans', sans-serif;
   height: 70px;
   width: 100%;
   margin-top: 10px;
   border: 2px solid #D1D3D4;
+  color: #D1D3D4;
+  font-size: 15px;
+  padding: 5px;
+  padding-bottom: 42px;
+
 }
 .button-save {
+  font-family: 'Open Sans', sans-serif;
   height: 30px;
   width: 100%;
   margin: 12px 0 12px 0;
   background: #00a79d;
   color: white;
   padding: 0;
+  border: 0;
+  font-size: 15px;
 
 }
 
@@ -83,10 +98,70 @@ input {
 
 /* need to rename? */
 .search {
+  font-family: 'Open Sans', sans-serif;
   display: flex;
   justify-content: center;
 }
 .input-search {
+  font-family: 'Open Sans', sans-serif;
   border: 2px solid #D1D3D4;
+  margin: 12px 0 12px 0;
+  color:#D1D3D4;
+  font-size: 15px;
+  padding: 5px;
+  width: 90vw;
+}
 
+/*=======================================
+>>>>>>>>  Card  <<<<<<<<
+========================================*/
+.new-idea-article {
+  margin: 17px;
+  border-bottom: 2px solid #D1D3D4;
+
+}
+
+h2 {
+  display: inline-block;
+  font-family: 'Roboto Slab', serif;
+  color: #6d6371;
+  font-size: 12px;
+  font-weight: 700;
+  font-size: 19px;
+}
+img {
+  /*display: inline-block;*/
+  width: 20px;
+
+}
+h3 {
+  font-size: 83%;
+  float:left
+}
+/*.new-idea-footer img {
+  float: left;
+}*/
+.delete-image {
+  float:right;
+}
+.new-idea-footer {
+  margin-top: 18px;
+  padding-bottom: 36px;
+}
+p {
+  margin-top: 10px;
+}
+.upvote-image, .downvote-image {
+  float: left;
+}
+.downvote-image {
+  margin-left: 5px;
+}
+.upvote-image:hover {
+  background-image: url("assets/upvote-hover.svg");
+}
+.h3-footer {
+  font-family: 'Roboto Slab', serif;
+  
+  margin-left: 5px;
 }
