--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/*h1 {font-size: 300%;}*/
 h2 {font-size: 275%;}
 h3 {font-size: 250%;}
 h4 {font-size: 225%;}
@@ -10,217 +9,203 @@ p {}
   box-sizing: border-box;
 }
 
-.header-wrapper {
-  display: flex;
-  flex-direction: column;
-  background: #e5f3f2;
-  width: 100vw;
-  align-items: center;
-}
+/*=======================================
+>>>>>>>>  body  <<<<<<<<
+========================================*/
 
-header, h1 {
-  font-family: 'Roboto Slab', serif;
-  margin-top: 10px;
-  display: inline-block;
-  display: flex;
-  justify-content: center;
-}
-h1 {
-  font-size: 25px;
-}
 body {
   font-family: 'Open Sans', sans-serif;
   display: flex;
   flex-direction: column;
 }
 
-.new-idea-body {
-  resize: none;
-  border: none;
-  font-family: 'Open Sans', sans-serif;
-  color:#939598;
-  font-size: 15px;
+/*=======================================
+>>>>>>>>  section: header wrapper  <<<<<<
+========================================*/
+
+.header-wrapper {
+  width: 100vw;
+  background: #e5f3f2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+header, h1 {
+  font-family: 'Roboto Slab', serif;
+  font-size: 25px;
+  margin-top: 10px;
+  display: inline-block;
+  display: flex;
+  justify-content: center;
 }
 
 .h1-idea {
   color: #00a79d;
 }
+
 .h1-box {
   color: #6d6e71;
 }
+
+/*=======================================
+>>>>>>>>  form input body & title  <<<<<<
+========================================*/
+
 .form {
+  width: 90vw;
   display: flex;
   flex-direction: column;
-  width: 90vw;
   border: 0;
   padding: 0;
 }
-.form-wrapper {
-  display: flex;
-  justify-content: center;
-}
-input {
-  padding: 0;
-}
+
 .input-title {
+  width: 100%;
   font-family: 'Open Sans', sans-serif;
+  font-size: 15px;
+  color:#D1D3D4;
   justify-content: center;
   margin-top: 15px;
-  width: 100%;
-  border: 2px solid #D1D3D4;
-  color:#D1D3D4;
-  font-size: 15px;
   padding: 5px;
-}
-.input-body {
-  font-family: 'Open Sans', sans-serif;
-  color: #D1D3D4;
-  height: 70px;
-  width: 100%;
-  margin-top: 10px;
   border: 2px solid #D1D3D4;
+}
+
+.input-body {
+  width: 100%;
+  height: 70px;
+  font-family: 'Open Sans', sans-serif;
   font-size: 15px;
+  color: #D1D3D4;
+  margin-top: 10px;
   padding: 5px;
   padding-bottom: 42px;
-
+  border: 2px solid #D1D3D4;
 }
+
 .button-save {
-  font-family: 'Open Sans', sans-serif;
-  height: 30px;
   width: 100%;
-  margin: 12px 0 12px 0;
-  background: #00a79d;
+  height: 30px;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 15px;
   color: white;
+  background: #00a79d;
+  margin: 12px 0 15px 0;
   padding: 0;
   border: 0;
-  font-size: 15px;
-
 }
 
 /*=======================================
->>>>>>>>  Main  <<<<<<<<
+>>>>>>>>  section search  <<<<<<<<
 ========================================*/
 
-.main-wrapper {
-  display: flex;
-}
-
-/* need to rename? */
 .search {
   font-family: 'Open Sans', sans-serif;
   display: flex;
   justify-content: center;
 }
+
 .input-search {
-  font-family: 'Open Sans', sans-serif;
-  border: 2px solid #D1D3D4;
-  margin: 12px 0 10px 0;
-  color:#D1D3D4;
-  font-size: 15px;
-  padding: 5px;
   width: 90vw;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 15px;
+  color:#D1D3D4;
+  margin: 15px 0 10px 0;
+  padding: 5px;
+  border: 2px solid #D1D3D4;
 }
 
 /*=======================================
->>>>>>>>  Card  <<<<<<<<
+>>>>>>>>  article  <<<<<<<<
 ========================================*/
-.new-idea-article {
-  margin: auto;
-  width: 90vw;
-  border-bottom: 2px solid #D1D3D4;
 
+.new-idea-article {
+  width: 90vw;
+  margin: auto;
+  /*border-bottom: 2px solid #D1D3D4;*/
+}
+
+.title-container {
+  margin-top: 12px;
 }
 
 h2, .new-idea-header {
+  width: 200px;
   display: inline-block;
   font-family: 'Roboto Slab', serif;
   color: #6d6371;
-  width: 200px;
-  font-size: 12px;
-  font-weight: 700;
   font-size: 19px;
+  font-weight: 700;
+  margin-top: 5px;
   border: 0;
-  margin-top: 15px;
-}
-img {
-  /*display: inline-block;*/
-  width: 20px;
-
-}
-h3 {
-  font-size: 83%;
-  float:left
-}
-
-
-/*=======================================
->>>>>>>>  images  <<<<<<<<
-========================================*/
-.upvote-image, .downvote-image {
-  float: left;
-}
-.downvote-image {
-  margin-left: 5px;
 }
 
 .delete-image {
-  float: right;
   width: 20px;
   height: 20px;
-  margin-top: 15px;
+  float: right;
+  margin-top: 10px;
   background: none;
   border: none;
   background-repeat: round;
   background-image: url("assets/delete.svg")
 }
-.delete-image:hover{
-  background-image: url("assets/delete-hover.svg");
+
+.new-idea-body {
+  font-size: 15px;
+  color:#939598;
+  resize: none;
+  border: none;
 }
+
+.new-idea-footer {
+  display: flex;
+  align-items: center;
+  margin: 12px 0 12px 0;
+  border-bottom: 2px solid #D1D3D4;
+}
+
+.upvote-image, .downvote-image {
+  float: left;
+  margin-bottom: 15px;
+}
+
 .upvote-image {
-  float: right;
   width: 20px;
   height: 20px;
+  float: right;
   background: none;
   border: none;
   background-repeat: round;
   background-image: url("assets/upvote.svg")
 }
 
-.upvote-image:hover {
-  background-image: url("assets/upvote-hover.svg");
-}
-
 .downvote-image {
-  float: right;
   width: 20px;
   height: 20px;
+  float: right;
+  margin-left: 5px;
   background: none;
   border: none;
   background-repeat: round;
   background-image: url("assets/downvote.svg")
-}
-.downvote-image:hover{
-  background-image: url("assets/downvote-hover.svg");
-}
-
-
-.new-idea-footer {
-  display: flex;
-  align-items: center;
-  margin: 12px 0 12px 0;
-}
-.title-container {
-  margin-top: 12px;
-}
-
-p {
-  margin-top: 10px;
 }
 
 .h3-footer {
   font-family: 'Roboto Slab', serif;
   padding-right: 5px;
   margin-left: 5px;
+  margin-bottom: 15px;
+}
+
+img {
+  width: 20px;
+}
+
+h3 {
+  font-size: 83%;
+  float:left;
+  margin-bottom: 15px;
 }
 
 /*=======================================
@@ -244,8 +229,25 @@ p {
 }
 
 /*=======================================
+>>>>>>>>  hover properties  <<<<<<<<
+========================================*/
+
+.delete-image:hover{
+  background-image: url("assets/delete-hover.svg");
+}
+
+.upvote-image:hover {
+  background-image: url("assets/upvote-hover.svg");
+}
+
+.downvote-image:hover{
+  background-image: url("assets/downvote-hover.svg");
+}
+
+/*=======================================
 >>>>>>>>  @media min400  <<<<<<<<
 ========================================*/
+
 @media screen and (min-width: 400px) {
 
 .input-title  {
@@ -283,8 +285,6 @@ h1  {
 .new-idea-article {
   width: 360px;
   margin: auto;
-  /*margin-top: 12px;
-  margin-bottom: 10px;*/
 }
 
 }
