--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,7 @@ header, h1 {
   justify-content: center;
 }
 
-.input-search {
+#input-search {
   width: 90vw;
   font-family: 'Open Sans', sans-serif;
   font-size: 15px;
