--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,3 @@
-h2 {font-size: 275%;}
-h3 {font-size: 250%;}
-h4 {font-size: 225%;}
-h5 {font-size: 200%;}
-h6 {font-size: 175%;}
-p {}
-
 * {
   box-sizing: border-box;
 }
@@ -23,8 +16,8 @@ body {
 >>>>>>>>  section: header wrapper  <<<<<<
 ========================================*/
 
-.header-wrapper {
-  width: 100vw;
+.header {
+  width: 100%;
   background: #e5f3f2;
   display: flex;
   flex-direction: column;
@@ -34,7 +27,7 @@ body {
 header, h1 {
   font-family: 'Roboto Slab', serif;
   font-size: 25px;
-  margin-top: 10px;
+  padding-top: 10px;
   display: inline-block;
   display: flex;
   justify-content: center;
@@ -44,7 +37,7 @@ header, h1 {
   color: #00a79d;
 }
 
-.h1-box {
+span {
   color: #6d6e71;
 }
 
@@ -53,41 +46,27 @@ header, h1 {
 ========================================*/
 
 .form {
-  width: 90vw;
+  width: 90%;
   display: flex;
   flex-direction: column;
-  border: 0;
-  padding: 0;
+  font-size: 15px;
 }
 
 .input-title {
-  width: 100%;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 15px;
+  font-size: inherit;
   color:#D1D3D4;
-  justify-content: center;
-  margin-top: 15px;
   padding: 5px;
   border: 2px solid #D1D3D4;
 }
-input[value="Title"]:focus {
-  color: #939598;
-}
 
 .input-body {
-  width: 100%;
   height: 70px;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 15px;
+  font-size: inherit;
   color: #D1D3D4;
   margin-top: 10px;
   padding: 5px;
   padding-bottom: 42px;
   border: 2px solid #D1D3D4;
-}
-
-input[value="Body"]:focus {
-  color: #939598;
 }
 
 .button-save {
