--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,8 @@ span {
 ========================================*/
 .input-search,
 .form {
-  width: 50%;
+  width: 70%;
+  max-width: 400px;
   display: block;
   margin: 15px auto;
   font-family: 'Open Sans', sans-serif;
@@ -54,12 +55,11 @@ span {
 
 .input-body {
   width: 100%;
-  height: 70px;
   font-size: inherit;
+  text-align: left;
   color: #6D6E71;
   margin-top: 10px;
   padding: 5px;
-  padding-bottom: 42px;
   border: 2px solid #D1D3D4;
 }
 
@@ -92,7 +92,8 @@ span {
 ========================================*/
 
 .input-search {
-  width: 50%;
+  width: 70%;
+  max-width: 400px;
   display: block;
   margin: auto;
   padding: 5px;
@@ -107,17 +108,17 @@ span {
 ========================================*/
 
 .card-container {
-  width: 50%;
+  width: 70%;
+  max-width: 400px;
   margin: auto;
 }
-
 
 .card {
   width: 100%;
 }
 
-.title-container {
-  margin-top: 12px;
+.text-wrapper {
+  padding-top: 12px;
 }
 
 h2, .new-idea-header {
@@ -150,7 +151,6 @@ h2, .new-idea-header {
   color:#939598;
   resize: none;
   border: none;
-
 }
 
 .new-idea-footer {
@@ -160,7 +160,8 @@ h2, .new-idea-header {
   border-bottom: 2px solid #D1D3D4;
 }
 
-.upvote-image, .downvote-image {
+.upvote-image,
+.downvote-image {
   float: left;
   margin-bottom: 15px;
 }
@@ -201,6 +202,7 @@ h3 {
   font-size: 83%;
   float:left;
   margin-bottom: 15px;
+  padding-top: 5px;
 }
 
 /*=======================================
@@ -241,15 +243,9 @@ h3 {
 
 /*MEDIA QUERY*/
 
-@media screen and (max-width: 700px) {
-  .form,
-  .input-search,
-  .card-container {
-    width: 70%;
-  }
-  .input-title,
-  .input-body,
-  .button-save {
-    width: 100%;
+@media screen and (max-width: 550px) {
+  .input-body {
+    height: 70px;
+    padding-bottom: 42px;
   }
 }
