--- a/styles.css
+++ b/styles.css
@@ -146,6 +146,7 @@ h2, .new-idea-header {
 }
 
 .new-idea-body {
+  padding: 5px;
   width: 100%;
   font-size: 15px;
   color:#939598;
@@ -202,7 +203,7 @@ h3 {
   font-size: 83%;
   float:left;
   margin-bottom: 15px;
-  padding-top: 5px;
+  padding: 5px;
 }
 
 /*=======================================
