alter to do properties

--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ span {
   border: 2px solid #D1D3D4;
 }
 
-.input-body {
+.input-task {
   width: 100%;
   font-size: inherit;
   text-align: left;
@@ -64,7 +64,7 @@ span {
 }
 
 .input-title::placeholder,
-.input-body::placeholder,
+.input-task::placeholder,
 .input-search::placeholder{
   color: #D1D3D4;
 }
@@ -117,7 +117,7 @@ span {
   padding-top: 12px;
 }
 
-h2, .new-idea-header {
+h2, .card-header {
   width: 80%;
   display: inline-block;
   font-family: 'Roboto Slab', serif;
@@ -141,7 +141,7 @@ h2, .new-idea-header {
   background-image: url("assets/delete.svg")
 }
 
-.new-idea-body {
+.card-body {
   padding: 5px;
   width: 100%;
   font-size: 15px;
@@ -150,7 +150,7 @@ h2, .new-idea-header {
   border: none;
 }
 
-.new-idea-footer {
+.card-footer {
   display: flex;
   align-items: center;
   margin: 12px 0 12px 0;
@@ -241,7 +241,7 @@ h3 {
 /*MEDIA QUERY*/
 
 @media screen and (max-width: 550px) {
-  .input-body {
+  .input-task {
     height: 70px;
     padding-bottom: 42px;
   }
