--- a/styles.css
+++ b/styles.css
@@ -238,16 +238,13 @@ h3 {
   border: none;
   border-radius: 10px;
   color: #6D6E71;
+  transition: .2s ease-in-out;
 }
 
 
-.filter-btn:hover,
-.completed-task:hover {
-  background-color: #045E55;
-  color: #fff;
-}
 
-.strikethrough {
+
+e {
   text-decoration: line-through;
 }
 
@@ -278,6 +275,12 @@ h3 {
 /*=======================================
 >>>>>>>>  hover properties  <<<<<<<<
 ========================================*/
+.show-btn:hover,
+.filter-btn:hover,
+.completed-task:hover {
+  background-color: #045E55;
+  color: #fff;
+}
 
 .delete-image:hover{
   background-image: url("assets/delete-hover.svg");
@@ -289,6 +292,15 @@ h3 {
 
 .downvote-image:hover{
   background-image: url("assets/downvote-hover.svg");
+}
+
+.show-btn,
+.filter-btn,
+.completed-task,
+.delete-image,
+.downvote-image,
+.upvote-image{
+  transition: .15s ease-in-out;
 }
 
 /*MEDIA QUERY*/
