--- a/styles.css
+++ b/styles.css
@@ -229,8 +229,13 @@ h3 {
 .show-more-btn{
   margin: 0 2px 10px;
 }
+
+.show-btn,
+.show-more-btn,
+.completed-task,
 .filter-btn{
-  margin: 5px;
+  padding: 5px 10px;
+  font-size: 15px;
 }
 
 .completed-task{
@@ -311,9 +316,11 @@ hover properties
 
 /*MEDIA QUERY*/
 
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 420px) {
   .input-task {
     height: 70px;
     padding-bottom: 42px;
   }
+
+  
 }
